# usvfs-example

./: CMakeLists.txt  main_usvfs.cpp
include/: logging.h  usvfs.h  usvfsparameters.h
lib/: usvfs_x64.lib
